# copyNCGlobalVar

./: .gitignore  CMakeLists.txt  main.cpp
testData/: so2_0.16_101902_noZ.nc  so2_0.16_101902_noZ_standard.nc
